module04 ex03 done

--- a/module04/ex03/Makefile
+++ b/module04/ex03/Makefile
@@ -4,7 +4,7 @@ C++ = clang++
 
 NAME = Characters
 
-SRC = main.cpp AMateria.cpp Cure.cpp Ice.cpp Character.cpp
+SRC = main.cpp AMateria.cpp Cure.cpp Ice.cpp Character.cpp MateriaSource.cpp
 
 all : $(NAME)
 
